--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -11,7 +11,6 @@
     <title>Mark Up</title>
   </head>
   <body>
-<!-- Logo on tab -->
 <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
@@ -131,7 +130,7 @@
     
       <footer>
         <div class="footer-container text-center">
-          <p>Floresca &copy; All Rights Reserved 2020</p>
+          <p>Mark-Up &copy; All Rights Reserved 2020</p>
         </div>
       </footer>
 
