--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="#">Mark-Up</a>
-                <div class="searchbar">
+                <div class="searchbar mr-auto text-center">
                     <input type="text" placeholder="search">
                     <div class="icon">
                         <i class="fas fa-search"></i>
@@ -34,17 +34,43 @@
                       <a class="nav-link" href="#">Shop</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Login</a>
+                      <a class="nav-link" data-toggle="modal" data-target="#MoLog">Login</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Sign up</a>
                     </li>
-                    <li class="align-self-center">
-                        <a href="#"><i class="fas fa-shopping-cart"></i></a>
-                    </li>
                   </ul>
             </div>
         </nav>
+<!-- Modal Login -->
+
+<div id="MoLog" class="modal fade">
+	<div class="modal-dialog modal-login modal-dialog-centered" >
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			</div>
+                <div class="avatar">
+                    <img src="mulogo.png" alt="">
+				<h4 class="modal-title">Login</h4>
+                </div>
+				<form action="#" method="post">
+					<div class="form-group">
+						<input type="text" class="form-control" placeholder="Email" required="required">
+					</div>
+					<div class="form-group">
+						<input type="password" class="form-control" placeholder="Password" required="required">					
+					</div>
+					<div class="form-group">
+						<input type="submit" class="btn btn-primary btn-block btn-lg" value="Login">
+                    </div>
+                    <p class="font-small blue-text d-flex justify-content-center">Don't have an account?<a href="#" class="blue-text ml-1">Sign up here</a></p>
+				</form>
+			
+			
+		</div>
+	</div>
+</div>   
 
 <!-- Slideshow -->
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -72,7 +98,7 @@
                     Step 2: Lorem ipsum dolor sit amet. <br/>
                     Step 3: Lorem ipsum dolor sit amet.
                 </h5>
-                <a href="#" class="btn btn-outline-info mr-1">
+                <a href="#" class="btn btn-primary mr-1">
                     Start Bidding Now
                 </a>
               </div>
@@ -81,7 +107,7 @@
             <img src="3.jpg" class="d-block w-100" alt="Third">
             <div class="carousel-caption text-right d-none d-md-block">
                 <h3>Got any question?</h3>
-                <a href="#" class="btn btn-outline-info mr-1">
+                <a href="#" class="btn btn-primary mr-1">
                     F.A.Qs
                 </a>
           </div>
@@ -96,6 +122,8 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
+
+
     
 <!-- Card deck -->
       <div class="card-deck">
@@ -137,6 +165,8 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <script src="script.js"></script>
     </body>
 </html>
