:lipstick: centered search bar

--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -9,14 +9,14 @@
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="mulogo.png">
-        <title>Mark Up</title>
+        <title>MarkUp</title>
     </head>
     <body>
 <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">Mark-Up</a>
-                <div class="searchbar mr-auto text-center">
+                <a class="navbar-brand" href="#">MarkUp</a>
+                <div class="searchbar">
                     <input type="text" placeholder="search">
                     <div class="icon">
                         <i class="fas fa-search"></i>
