--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -92,7 +92,7 @@
           </div>
           <div class="carousel-item">
             <img src="2.jpg" class="d-block w-100" alt="Second">
-              <div class="carousel-caption text-left d-none d-md-block">
+              <div class="carousel-caption text-right d-none d-md-block">
                 <h3>How does it work?</h3>
                 <h5>Step 1: Lorem ipsum dolor sit amet. <br/>
                     Step 2: Lorem ipsum dolor sit amet. <br/>
@@ -149,7 +149,7 @@
         <div class="card text-center">
           <img class="card-img-top" src="6.jpg" alt="Card image cap">
           <div class="card-block">
-            <h4 class="card-title">Miscellaneous</h4>
+            <h4 class="card-title">Kids'</h4>
           <a href="#" class="btn btn-outline-info mr-1">Start Bidding Here</a>      
           </div>
         </div>  
