--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -7,8 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/png" href="mulogo.png">
+        <link rel="stylesheet" href="/CSS/homestyle.css">
+        <link rel="icon" type="image/png" href="Images/mulogo.png">
         <title>MarkUp</title>
     </head>
     <body>
@@ -37,7 +37,7 @@
                       <a class="nav-link" data-toggle="modal" data-target="#MoLog">Login</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Sign up</a>
+                      <a class="nav-link" href="HTML/Sign Up.html">Sign up</a>
                     </li>
                   </ul>
             </div>
@@ -51,7 +51,7 @@
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 			</div>
                 <div class="avatar">
-                    <img src="mulogo.png" alt="">
+                    <img src="/Images/mulogo.png" alt="">
 				<h4 class="modal-title">Login</h4>
                 </div>
 				<form action="#" method="post">
@@ -81,7 +81,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="1.jpg" class="d-block w-100" alt="First">
+            <img src="/Images/Carousel1.jpg" class="d-block w-100" alt="First">
             <div class="carousel-caption d-none d-md-block">
                 <h1>About us</h1>
                 <p>Mark-Up is a newly developed Auction System created by a team of 6 students in Technological University of the Philippines.</p>
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="2.jpg" class="d-block w-100" alt="Second">
+            <img src="Images/Carousel2.jpg" class="d-block w-100" alt="Second">
               <div class="carousel-caption text-right d-none d-md-block">
                 <h3>How does it work?</h3>
                 <h5>Step 1: Lorem ipsum dolor sit amet. <br/>
@@ -104,7 +104,7 @@
               </div>
           </div>
           <div class="carousel-item">
-            <img src="3.jpg" class="d-block w-100" alt="Third">
+            <img src="Images/Carousel3.jpg" class="d-block w-100" alt="Third">
             <div class="carousel-caption text-right d-none d-md-block">
                 <h3>Got any question?</h3>
                 <a href="#" class="btn btn-primary mr-1">
@@ -129,7 +129,7 @@
       <div class="card-deck">
         <div class="col-md-4">
         <div class="card text-center">
-          <img class="card-img-top" src="4.jpg" alt="Card image cap">
+          <img class="card-img-top" src="Images/Card1.jpg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Women's</h4>
           <a href="#" class="btn btn-outline-info mr-1">Start Bidding Here</a>
@@ -138,7 +138,7 @@
         </div>
         <div class="col-md-4">
         <div class="card text-center">
-          <img class="card-img-top" src="5.jpg" alt="Card image cap">
+          <img class="card-img-top" src="Images/Card2.jpg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Men's</h4>
           <a href="#" class="btn btn-outline-info mr-1">Start Bidding Here</a>
@@ -147,7 +147,7 @@
         </div>
         <div class="col-md-4">
         <div class="card text-center">
-          <img class="card-img-top" src="6.jpg" alt="Card image cap">
+          <img class="card-img-top" src="Images/Card3.jpg" alt="Card image cap">
           <div class="card-block">
             <h4 class="card-title">Kids'</h4>
           <a href="#" class="btn btn-outline-info mr-1">Start Bidding Here</a>      
@@ -167,6 +167,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script src="script.js"></script>
+<script src="JS/homescript.js"></script>
     </body>
 </html>
