--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-        <link rel="stylesheet" href="/CSS/homestyle.css">
+        <link rel="stylesheet" href="CSS/homestyle.css">
         <link rel="icon" type="image/png" href="Images/mulogo.png">
         <title>MarkUp</title>
     </head>
