--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -15,7 +15,10 @@
 <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">MarkUp</a>
+              <a class="navbar-brand " href="index.html">
+                <img src="Images/mulogo.png" width="50" height="50" class="d-inline-block align-middle" alt="">
+                Mark-Up
+            </a>
                 <div class="searchbar">
                     <input type="text" placeholder="search">
                     <div class="icon">
@@ -81,7 +84,7 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Images/Carousel1.jpg" class="d-block w-100" alt="First">
+            <img src="Images/Carousel1.jpg" class="d-block w-100" alt="First">
             <div class="carousel-caption d-none d-md-block">
                 <h1>About us</h1>
                 <p>Mark-Up is a newly developed Auction System created by a team of 6 students in Technological University of the Philippines.</p>
