--- a/BackEndFiles/Testlogin/html/index.html
+++ b/BackEndFiles/Testlogin/html/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="homestyle.css">
     <link rel="icon" type="image/png" href="mulogo.png">
     <title>MarkUp</title>
 </head>
@@ -39,7 +39,7 @@
                         <a class="nav-link" data-toggle="modal" data-target="#MoLog">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sign up</a>
+                        <a class="nav-link" href="Sign-Up.html">Sign up</a>
                     </li>
                 </ul>
             </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="carousel-item">
                 <img src="2.jpg" class="d-block w-100" alt="Second">
-                <div class="carousel-caption text-left d-none d-md-block">
+                <div class="carousel-caption text-right d-none d-md-block">
                     <h3>How does it work?</h3>
                     <h5>Step 1: Lorem ipsum dolor sit amet. <br/> Step 2: Lorem ipsum dolor sit amet. <br/> Step 3: Lorem ipsum dolor sit amet.
                     </h5>
@@ -149,7 +149,7 @@
             <div class="card text-center">
                 <img class="card-img-top" src="6.jpg" alt="Card image cap">
                 <div class="card-block">
-                    <h4 class="card-title">Miscellaneous</h4>
+                    <h4 class="card-title">Kids'</h4>
                     <a href="#" class="btn btn-outline-info mr-1">Start Bidding Here</a>
                 </div>
             </div>
@@ -167,7 +167,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    <script src="JS/homescript.js"></script>
 </body>
 
 </html>
