Updated! :white_check_mark:

--- a/BackEndFiles/Testlogin/html/admin.html
+++ b/BackEndFiles/Testlogin/html/admin.html
@@ -174,10 +174,10 @@
                                 </tr>
                                 <tr>
                                     <th scope="row">10</th>
-                                    <td>Franco Arambulo</td>
-                                    <td>arambulofranks@gmail.com</td>
-                                    <td>+639568853497</td>
-                                    <td>Active</td>
+                                    <td>umay mo</td>
+                                    <td>vaho@gmail.com</td>
+                                    <td>123237</td>
+                                    <td>patay na</td>
                                     <td>
                                         <button type="button" class="btn btn-success"><i class="fas fa-edit"></i></button>
                                         <button type="button" class="btn btn-danger"><i class="far fa-trash-alt"></i></button>
