--- a/FrontDev/HTML/Sign Up.html
+++ b/FrontDev/HTML/Sign Up.html
@@ -11,33 +11,34 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">MarkUp</a>
-            <div class="searchbar">
-                <input type="text" placeholder="search">
-                <div class="icon">
-                    <i class="fas fa-search"></i>
-                </div>
-            </div>
+          <a class="navbar-brand " href="../index.html">
+            <img src="../Images/mulogo.png" width="50" height="50" class="d-inline-block align-middle" alt="">               
+          </a>                
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>              
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ml-auto ">
-                <li class="nav-item">
-                  <a class="nav-link" href="../index.html">HOME</a>
+              <ul class="navbar-nav mr-auto ">
+                <li class="nav-item ">
+                  <a class="nav-link" href="../index.html">Home</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">SHOP</a>
+                <li class="nav-item ">
+                  <a class="nav-link" href="/HTML/Shop.html">Shop</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" data-toggle="modal" data-target="#MoLog">LOGIN</a>
+                <li class="nav-item ">
+                  <a class="nav-link" data-toggle="modal" data-target="#MoLog">Login</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="Sign Up.html">SIGN UP</a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="HTML/Sign Up.html">Sign up</a>
                 </li>
               </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
         </div>
-    </nav>
+      </nav>
 
     <section>
         <div class="imgBx">
