--- a/FrontDev/HTML/Shop.html
+++ b/FrontDev/HTML/Shop.html
@@ -7,16 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-        <link rel="stylesheet" href="/CSS/shopstyle.css">
-        <link rel="icon" type="image/png" href="/Images/mulogo.png">
+        <link rel="stylesheet" href="../CSS/shopstyle.css">
+        <link rel="icon" type="image/png" href="../Images/mulogo.png">
         <title>Shop</title>
     </head>
     <body>
     <!-- Navbar -->
             <nav id= MyHeader class="navbar navbar-expand-lg sticky-top navbar-light bg-light shadow-sm p-3 mb-5 bg-white">
                 <div class="container">
-                  <a class="navbar-brand " href="/index.html">
-                    <img src="/Images/mulogo.png" width="50" height="50" class="d-inline-block align-middle" alt="">               
+                  <a class="navbar-brand " href="../index.html">
+                    <img src="../Images/mulogo.png" width="50" height="50" class="d-inline-block align-middle" alt="">               
                   </a>                
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav mr-auto ">
                         <li class="nav-item ">
-                          <a class="nav-link" href="/index.html">Home</a>
+                          <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item active">
                           <a class="nav-link" href="#">Shop</a>
@@ -43,11 +43,11 @@
                     </div>
                 </div>
               </nav>
-    <!-- Categories -->
-    <section class="module-small">
-      <div class="container">        
+    <div class="container-fluid">
+      <!-- Categories -->
+      <div class="col-xl-10 col-lg-9" id="contents">   
         <form class="row">        
-          <div class="col-sm-3 ml-lg-5">
+          <div class="col-md-3 ml-md-5 p-0">
             <select class="form-control">
               <option selected="selected">Default</option>
               <option>Women</option>
@@ -57,33 +57,33 @@
           </div>
         </form>
       </div>
-    </section>
-    <!-- Card -->
-    <div class="col-xl-10 col-lg-9 p-5" id="contents">
+      <!-- Card -->
+      <div class="col-xl-10 col-lg-9 p-5" id="contents">
         <div class="card-deck" >
             <a href="#" class="card">
-              <img class="card-img-top" src="/Images/Product1.png" alt="Card image cap">
+              <img class="card-img-top" src="../Images/Product1.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Calvin Klein Sigma Sneakers</h4>
                 <p class="card-text">Highest Ask:</br>PHP 10,000</p>
               </div>
             </a>
             <a href="#" class="card">
-              <img class="card-img-top" src="/Images/Product2.png" alt="Card image cap">
+              <img class="card-img-top" src="../Images/Product2.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Adidas Continental 80 Pride</h4>
                 <p class="card-text">Highest Ask:</br>PHP 10,000</p>
               </div>
             </a>
             <a href="#" class="card">
-              <img class="card-img-top" src="/Images/Product3.png" alt="Card image cap">
+              <img class="card-img-top" src="../Images/Product3.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Nike Jordan 1 Retro Black Toe</h4>
                 <p class="card-text">Highest Ask:</br>PHP 10,000</p>
               </div>
             </a>
-        </div>
-    </div>
+          </div>
+      </div>
+  </div>
     <!-- FOOTER -->
     <footer>
       <div class="container-fluid text-center text-light p-0 footer">
