--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -27,7 +27,7 @@
                   <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/HTML/Shop.html">Shop</a>
+                  <a class="nav-link" href="HTML/Shop.html">Shop</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" data-toggle="modal" data-target="#MoLog">Login</a>
