Login, About and some navbar fixes

--- a/FrontDev/HTML/Sign Up.html
+++ b/FrontDev/HTML/Sign Up.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../CSS/signupstyle.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light bg-white">
         <div class="container">
           <a class="navbar-brand " href="../index.html">
             <img src="../Images/mulogo.png" width="50" height="50" class="d-inline-block align-middle" alt="">               
@@ -25,11 +25,14 @@
                 <li class="nav-item ">
                   <a class="nav-link" href="/HTML/Shop.html">Shop</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/HTML/About.html">About</a>
+                </li>
                 <li class="nav-item ">
-                  <a class="nav-link" data-toggle="modal" data-target="#MoLog">Login</a>
+                  <a class="nav-link" href="/HTML/Login.html">Login</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="HTML/Sign Up.html">Sign up</a>
+                  <a class="nav-link" href="/HTML/Sign Up.html">Sign up</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
@@ -70,7 +73,7 @@
                         <input type="submit" value="SIGN UP" name="">
                     </div>
                     <div class="inputBx">
-                        <p>Already a member? <a href="#">Login here</a> </p>
+                        <p>Already a member? <a href="/HTML/Login.html">Login here</a> </p>
                     </div>
                 </form>
             </div>
