--- a/FrontDev/index.html
+++ b/FrontDev/index.html
@@ -30,7 +30,10 @@
                   <a class="nav-link" href="HTML/Shop.html">Shop</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" data-toggle="modal" data-target="#MoLog">Login</a>
+                  <a class="nav-link" href="/HTML/About.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/HTML/Login.html">Login</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="HTML/Sign Up.html">Sign up</a>
