--- a/FrontDev/HTML/About.html
+++ b/FrontDev/HTML/About.html
@@ -104,7 +104,7 @@
         <div class="col-md-6 row py-4">
           <div class="col-md-6">
             <img
-              class="rounded-circle w-100 border border-info"
+              class="rounded-circle w-100 border border-0 border-info"
               src="/Images/PO.jpg"
               alt="Card image cap"
             />
@@ -120,7 +120,7 @@
         <div class="col-md-6 row py-4">
           <div class="col-md-6">
             <img
-              class="rounded-circle w-100 border border-info"
+              class="rounded-circle w-100 border border-0 border-info"
               src="/Images/QA.PNG"
               alt="Card image cap"
             />
@@ -136,7 +136,7 @@
         <div class="col-md-6 row py-4">
           <div class="col-md-6">
             <img
-              class="rounded-circle w-100 border border-info"
+              class="rounded-circle w-100 border border-0 border-info"
               src="/Images/FED.jpg"
               alt="Card image cap"
             />
@@ -152,7 +152,7 @@
         <div class="col-md-6 row py-4">
           <div class="col-md-6">
             <img
-              class="rounded-circle w-100 border border-info"
+              class="rounded-circle w-100 border border-0 border-info"
               src="/Images/BED.png"
               alt="Card image cap"
             />
@@ -168,7 +168,7 @@
         <div class="col-md-6 row py-4">
           <div class="col-md-6">
             <img
-              class="rounded-circle w-100 border border-info"
+              class="rounded-circle w-100 border border-0 border-info"
               src="/Images/DB1.PNG"
               alt="Card image cap"
             />
@@ -184,7 +184,7 @@
         <div class="col-md-6 row py-4">
           <div class="col-md-6">
             <img
-              class="rounded-circle w-100 border border-info"
+              class="rounded-circle w-100 border border-0 border-info"
               src="/Images/DB2.PNG"
               alt="Card image cap"
             />
