--- a/FrontDev/HTML/Shop.html
+++ b/FrontDev/HTML/Shop.html
@@ -77,7 +77,7 @@
                 <p class="card-text">Highest Ask:</br>PHP 10,000</p>
               </div>
             </a>
-            <a href="#" class="card">
+            <a href="/HTML/Itempage.html" class="card">
               <img class="card-img-top" src="../Images/Product3.png" alt="Card image cap">
               <div class="card-block">
                 <h4 class="card-title">Nike Jordan 1 Retro Black Toe</h4>
