Last edit HAHAA

--- a/FrontDev/HTML/Itempage.html
+++ b/FrontDev/HTML/Itempage.html
@@ -41,15 +41,13 @@
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"/>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
       </div>
     </nav>
 
-    <!-- content -->
+    <!-- Content -->
     <div class="container-fluid">
       <div class="row p-md-5">
         <div class="col-md-6">
@@ -140,7 +138,7 @@
       </div>        
     </div>
 
-    <!-- FOOTER -->
+    <!-- Footer -->
     <footer>
       <div class="container-fluid text-center text-light p-0 footer">
         <div class="footer-container">
