--- a/FrontDev/HTML/Sign Up.html
+++ b/FrontDev/HTML/Sign Up.html
@@ -42,7 +42,6 @@
             </div>
         </div>
       </nav>
-
     <section>
         <div class="imgBx">
             <img src="../Images/Sign Up.jpg">
@@ -67,7 +66,7 @@
                         <input type="text" name="" placeholder="Password">
                     </div>
                     <div class="inputBx">
-                        <p>By clicking "SIGN UP", I agree to Mark-Up's <a href="#">Terms and Conditions</a> </p>
+                        <p>By clicking "SIGN UP", I agree to Mark-Up's <a href="/HTML/Maintenance.html">Terms and Conditions</a> </p>
                     </div>
                     <div class="inputBx">
                         <input type="submit" value="SIGN UP" name="">
