--- a/FrontDev/HTML/About.html
+++ b/FrontDev/HTML/About.html
@@ -24,23 +24,9 @@
       class="navbar navbar-expand-lg sticky-top navbar-light bg-light shadow-sm p-3 mb-5 bg-white">
       <div class="container">
         <a class="navbar-brand" href="../index.html">
-          <img
-            src="../Images/mulogo.png"
-            width="50"
-            height="50"
-            class="d-inline-block align-middle"
-            alt=""
-          />
+          <img src="../Images/mulogo.png" width="50" height="50" class="d-inline-block align-middle" alt=""/>
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,21 +48,14 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input
-              class="form-control mr-sm-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"/>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
       </div>
     </nav>
 
-    <!-- upper -->
+    <!-- About -->
     <div class="container-fluid m-0 p-4">
       <div class="row">
         <div class="col-md-7">
@@ -199,7 +178,7 @@
       </div>
     </div>
 
-    <!-- FOOTER -->
+    <!-- Footer -->
     <footer>
       <div class="container-fluid text-center text-light p-0 footer">
         <div class="footer-container">
