--- a/FrontDev/HTML/Login.html
+++ b/FrontDev/HTML/Login.html
@@ -17,23 +17,9 @@
       class="navbar navbar-expand-lg sticky-top navbar-light bg-light bg-white">
       <div class="container">
         <a class="navbar-brand" href="../index.html">
-          <img
-            src="../Images/mulogo.png"
-            width="50"
-            height="50"
-            class="d-inline-block align-middle"
-            alt=""
-          />
+          <img src="../Images/mulogo.png" width="50" height="50" class="d-inline-block align-middle" alt=""/>
         </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -55,15 +41,8 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input
-              class="form-control mr-sm-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"/>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"> Search </button>
           </form>
         </div>
       </div>
