--- a/FrontDev/HTML/Shop.html
+++ b/FrontDev/HTML/Shop.html
@@ -87,7 +87,7 @@
           </div>
       </div>
   </div>
-    <!-- FOOTER -->
+    <!-- Footer -->
     <footer>
       <div class="container-fluid text-center text-light p-0 footer">
         <div class="footer-container">                         
